--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     <div id="map"></div>
     <h2>Dernier message ATIS :</h2>
     <div id="atis-message">
-        <!-- COPIER-COLLER LA TRANSCRIPTION ICI -->
-        <p>Tallinn ATIS, message Alpha, 12:35 UTC. Piste 08 en service, vent 270/10 kt, visibilité 10 km, pas de nuages en dessous de 1500 m, température 15°C, QNH 1013 hPa. Attendez-vous à des rafales de vent.</p>
+        <!-- La transcription sera automatiquement mise à jour ici -->
+        <p>En attente de la première transcription...</p>
     </div>
     <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
     <script>
