--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@
     </style>
 </head>
 <body>
-    <h1>ATIS de l'aéroport de Tallinn (EETN)</h1>
+    <h1>Tallinn (EETN) airport ATIS</h1>
 
    
 
-    <h2>Dernier message ATIS :</h2>
+    <h2>Last ATIS message:</h2>
     <div id="atis-message">
         <p>North 8, information, Delta, out. This is Talon Airport. Information, Delta. Time, 1120, expect ILS approach. Runway 08, in use. Runway 08, condition report time at 0850. Runway condition code, touchdown, 6. Need points, 6. Stop end, 6. Deposit, touchdown, dry. Need points, dry. Stop end, dry. Transition level 5-5, bird activity in vicinity of airport. Wind, runway 08, touchdown zone, 140°, 5 knots. Variable between 100° and 190°, stop end. </p>
     </div>
