--- a/index.html
+++ b/index.html
@@ -30,42 +30,9 @@
 <body>
     <h1>Tallinn EETN ATIS</h1>
 
-   
-
     <h2>Last ATIS message:</h2>
     <div id="atis-message">
-
-    <h3 style="margin: 0 0 0.5em 0; font-size: 1.1em;">
-        ATIS Tallinn (EETN) - <strong>Info Y</strong>
-        <span style="float: right; color: #666; font-size: 0.9em;">?Z</span>
-    </h3>
-    <div style="display: grid; grid-template-columns: 1fr 1fr; gap: 0.5em;">
-        <div>
-            <strong>WIND:</strong> 080/09KT<br>
-            <strong>VIS:</strong> &gt;0KM<br>
-            <strong>RWY COND:</strong> 6/6/6 (DRY)<br>
-            <strong>CLOUD:</strong> SCT 3700FT<br>
-            <strong>BIRD:</strong> None
-        </div>
-        <div>
-            <strong>TEMP/DEW:</strong> 1/4<br>
-            <strong>QNH:</strong> 1hPa<br>
-            <strong>TL:</strong> 55<br>
-            <strong>TREND:</strong> NOSIG<br>
-            <strong>RWY:</strong> 08
-        </div>
-    </div>
-    
-        </div>
-        <div>
-            <strong>TEMP/DEW:</strong> 12/4<br>
-            <strong>QNH:</strong> 1037hPa<br>
-            <strong>TL:</strong> 55<br>
-            <strong>TREND:</strong> NOSIG<br>
-            <strong>RWY:</strong> 08
-        </div>
-    </div>
-    
+        <!-- Le contenu sera généré automatiquement par le workflow -->
     </div>
 </body>
 </html>
