--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <strong>VIS:</strong> 0, kilometers<br>
             <strong>RWY COND:</strong> 6/6/6 (DRY)<br>
             <strong>CLOUD:</strong><br>FEW<br>
-            <strong>BIRD:</strong> in vicinity of airport
+            <strong>BIRD:</strong> in vicinity of airport<br>
             <strong>TEMP/DEW:</strong> 1/1<br>
             <strong>QNH:</strong> 1007hPa<br>
             <strong>TL:</strong> 65<br>
