--- a/index.html
+++ b/index.html
@@ -1,92 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-<meta charset="utf-8"/>
-<title>ATIS Tallinn (EETN)</title>
-<style>
-    body {
-        font-family: Arial, sans-serif;
-        max-width: 600px;
-        margin: 30px auto;
-        padding: 10px 20px;
-        background-color: #fafafa;
-        color: #222;
-    }
-
-    h1 {
-        text-align: center;
-        margin-bottom: 0.5em;
-        color: #003366;
-    }
-
-    #atis-message {
-        background: #fff;
-        border: 1px solid #ccc;
-        border-radius: 6px;
-        padding: 15px 20px;
-    }
-
-    .atis-info {
-        display: flex;
-        flex-direction: column;
-        gap: 6px;
-        line-height: 1.4em;
-    }
-
-    .atis-info strong {
-        color: #003366;
-    }
-
-    .atis-header {
-        text-align: center;
-        margin-bottom: 10px;
-        font-weight: bold;
-    }
-
-    .atis-header span {
-        color: #666;
-        font-weight: normal;
-    }
-</style>
-</head>
-<body>
-
-<h1>ATIS Tallinn (EETN)</h1>
-
-<h3 style="margin: 0 0 0.5em 0; font-size: 1.1em;">
-        ATIS Tallinn (EETN) - <strong>Info U</strong>
-        <span style="float: right; color: #666; font-size: 0.9em;">0652Z</span>
-    </h3>
-    <div style="display: grid; grid-template-columns: 1fr 1fr; gap: 0.5em;">
-        <div>
-            <strong>WIND:</strong> 000/6KT<br>
-            <strong>VIS:</strong> 3,500 meters<br>
-            <strong>RWY COND:</strong> 6/6/6 (DRY)<br>
-            <strong>CLOUD:</strong><br>OVC<br>
-            <strong>BIRD:</strong> in vicinity of airport
-        </div>
-        <div>
-            <strong>TEMP/DEW:</strong> 1/1<br>
-            <strong>QNH:</strong> 1007hPa<br>
-            <strong>TL:</strong> 65<br>
-            <strong>TREND:</strong> NOSIG<br>
-            <strong>RWY:</strong> 08
-        </div>
-    </div>
-
-    <div class="atis-info">
-        <div><strong>Wind:</strong> 000° / 6 kt</div>
-        <div><strong>Visibility:</strong> 3,500 m</div>
-        <div><strong>Runway in use:</strong> 08</div>
-        <div><strong>Runway condition:</strong> 6 / 6 / 6 (dry)</div>
-        <div><strong>Cloud:</strong> Overcast (OVC)</div>
-        <div><strong>Bird activity:</strong> in the vicinity of the airport</div>
-        <div><strong>Temperature / Dew point:</strong> 1°C / 1°C</div>
-        <div><strong>QNH:</strong> 1007 hPa</div>
-        <div><strong>Transition level:</strong> 65</div>
-        <div><strong>Trend:</strong> No significant change (NOSIG)</div>
-    </div>
-</div>
-
-</body>
-</html>
+index.html
