--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="utf-8">
+<title>ATIS Tallinn EETN</title>
+</head>
+<body>
+<div id="atis-message"></div>
+</body>
+</html>
