--- a/template.html
+++ b/template.html
@@ -1,1 +1,36 @@
-
+<!DOCTYPE html>
+<html lang="fr">
+<head>
+    <meta charset="UTF-8">
+    <style>
+        :root { --bg: #000; --card: #0d0d0d; --border: #222; --text: #fff; --dim: #777; }
+        body { background: var(--bg); color: var(--text); font-family: 'Inter', sans-serif; padding: 25px; display: flex; justify-content: center; }
+        .container { width: 100%; max-width: 420px; }
+        .header { display: flex; justify-content: space-between; align-items: center; margin-bottom: 25px; font-size: 0.8rem; color: var(--dim); font-weight: 800; }
+        .info-section { text-align: center; margin-bottom: 25px; background: var(--card); border: 1px solid var(--border); border-radius: 20px; padding: 15px; }
+        .info-letter { font-size: 6rem; font-weight: 900; line-height: 1; margin: 0; }
+        .grid { display: grid; grid-template-columns: 1fr 1fr; gap: 12px; }
+        .tile { background: var(--card); border: 1px solid var(--border); border-radius: 16px; padding: 18px; }
+        .label { color: var(--dim); font-size: 0.6rem; text-transform: uppercase; letter-spacing: 1px; margin-bottom: 8px; font-weight: 700; }
+        .val { font-size: 1.2rem; font-weight: 700; }
+        .lvp-alert { color: #ff4444; border: 1px solid #ff4444; padding: 2px 8px; border-radius: 5px; animation: blink 2s infinite; font-size: 0.7rem; }
+        @keyframes blink { 0% {opacity: 1;} 50% {opacity: 0.3;} 100% {opacity: 1;} }
+        .raw { margin-top: 40px; font-size: 0.7rem; color: #555; text-align: justify; text-transform: uppercase; border-top: 1px solid #222; padding-top: 20px; }
+    </style>
+</head>
+<body>
+    <div class="container">
+        <div class="header"><span>EETN TALLINN</span> {{LVP_TAG}} <span>{{ZULU}}Z</span></div>
+        <div class="info-section"><span style="color:var(--dim); text-transform:uppercase; font-size:0.7rem; letter-spacing:3px;">Information</span><div class="info-letter">{{INFO}}</div></div>
+        <div class="grid">
+            <div class="tile"><div class="label">Runway</div><div class="val">{{RWY}}</div></div>
+            <div class="tile"><div class="label">QNH</div><div class="val">{{QNH}} hPa</div></div>
+            <div class="tile"><div class="label">Wind (TDZ)</div><div class="val">{{WIND}}</div></div>
+            <div class="tile"><div class="label">Visibility</div><div class="val">{{VIS}} <span style="font-size:0.7rem; color:var(--dim)">{{RVR}}</span></div></div>
+            <div class="tile"><div class="label">Temp / Dewp</div><div class="val">{{TEMP_DEWP}}</div></div>
+            <div class="tile"><div class="label">RCC</div><div class="val">5/5/5</div></div>
+        </div>
+        <div class="raw">{{RAW_TEXT}}</div>
+    </div>
+</body>
+</html>
