--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+{{INFO}}<!DOCTYPE html>
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
@@ -164,7 +164,7 @@
 
         <div class="info-card">
             <span class="info-label">Information</span>
-            <div class="info-letter">A</div>
+            <div class="info-letter">{{INFO}}</div>
         </div>
 
         <div class="grid">
