--- a/index.html
+++ b/index.html
@@ -188,6 +188,7 @@
             <div class="tile">
                 <div class="label">Temp / Dewp</div>
                 <div class="val">{{TEMP_DEWP}}</div>
+            </div>
             <div class="tile">
                 <div class="label">RCC</div>
                 <div class="val">{{RCC}}</div>
